<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:id="@+id/add_amounts_header"
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_amounts"/>

    <Button
            android:id="@+id/add_surcharge"
            style="@style/ItemButton"
            android:text="@string/add_surcharge_fee"/>

    <Button
            android:id="@+id/add_charity"
            style="@style/ItemButton"
            android:layout_marginTop="@dimen/margin_vertical_items"
            android:text="@string/add_for_charity"/>

    <TextView
            android:id="@+id/pay_amounts_header"
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pay_portion"/>

    <Button
            android:id="@+id/pay_with_points"
            style="@style/ItemButton"
            android:text="@string/pay_portion_with_loyalty_points"/>

    <Button
            android:id="@+id/pay_with_giftcard"
            style="@style/ItemButton"
            android:layout_marginTop="@dimen/margin_vertical_items"
            android:text="@string/pay_portion_with_gift_card"/>

    <TextView
            android:id="@+id/add_data_header"
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_data_to_transaction"/>

    <Button
            android:id="@+id/add_customer_data"
            style="@style/ItemButton"
            android:text="@string/add_customer_data"/>

    <Button
            android:id="@+id/add_basket"
            style="@style/ItemButton"
            android:text="@string/add_basket"/>

    <Button
            android:id="@+id/discount_basket_item"
            style="@style/ItemButton"
            android:text="@string/add_item_discount"/>

</merge>