<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/show_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/view_request_data"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:id="@+id/add_amounts_header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_amounts"/>

    <Button
        android:id="@+id/add_surcharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_surcharge_fee"/>

    <Button
        android:id="@+id/add_charity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_for_charity"/>

    <TextView
        android:id="@+id/pay_amounts_header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pay_portion"/>

    <Button
        android:id="@+id/pay_with_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_portion_with_loyalty_points"/>

    <Button
        android:id="@+id/pay_with_giftcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_portion_with_gift_card"/>

    <TextView
        android:id="@+id/add_data_header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_data_to_transaction"/>

    <Button
        android:id="@+id/add_customer_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_customer_data"/>

    <Button
        android:id="@+id/send_response"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/send_response"/>

</merge>