<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/add_amounts_header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_amounts"/>

    <Button
        android:id="@+id/add_tax"
        style="@style/ItemButton"
        android:text="@string/add_tax"/>

    <TextView
        android:id="@+id/add_data_header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_data_to_transaction"/>

    <Button
        android:id="@+id/add_customer_data"
        style="@style/ItemButton"
        android:text="@string/add_customer_data"/>

    <CheckBox
        android:id="@+id/enable_split"
        style="@style/CheckBox"
        android:layout_marginTop="@dimen/margin_vertical_items"
        android:text="@string/enable_split"/>

</merge>