<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/show_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/view_request_data"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:id="@+id/split_header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/setup_split"/>

    <TextView
        android:id="@+id/prev_split_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/info_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/split_basket"
        style="@style/ItemButton"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/split_basket_in_half"/>

    <Button
        android:id="@+id/split_amounts"
        style="@style/ItemButton"
        android:layout_marginTop="@dimen/margin_vertical_items"
        android:text="@string/split_amounts_in_half"/>

</merge>